compiler/tests/fixtures/valid/conditional_effects_elif.viv
// Conditional effects with elif branches

action assess-threat:
    roles:
        @assessor:
            as: initiator
        @subject:
            as: recipient
    effects:
        if @subject.trust > 70:
            @assessor.trust += 5
        elif @subject.trust > 30:
            @assessor.trust += 1
        else:
            @assessor.trust -= 5
        end
