compiler/tests/fixtures/invalid/semantics/missing_group_decorator.viv
// Invalid: references group role without group-role decorator

action distribute:
    roles:
        @distributor:
            as: initiator
        @recipients*:
            as: recipient
            n: 2-5
    effects:
        @recipients.items += 1
